--- a/prva-grana.html
+++ b/prva-grana.html
@@ -9,9 +9,11 @@
 <body>
     <p>Vezba za Git</p>
     <p>Namucili smo se</p>
-    <a href="https://www.facebook.com/">FB</a>
-    <a href="https://itbootcamp.rs/">It bootcamp</a>
-    <table>
+    <ul>
+    <li><a href="https://www.facebook.com/">FB</a></li>
+    <li><a href="https://itbootcamp.rs/">It bootcamp</a></li>
+    </ul>
+    <table border="1">
         <tr>
             <th>Jelo</th>
             <th>Pice</th>
