--- a/prva-strana.html
+++ b/prva-strana.html
@@ -43,6 +43,6 @@
             <td>benzin</td>
         </tr>
     </table>
-    <img src="./slika.jpg.jpg" width="200" height="200"/>
+    <img src="./slika.jpg" width="200" height="200"/>
 </body>
 </html>
